--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.github.myinnos:ImageSliderWithSwipes:v1.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
 }
