--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.firebase:firebase-core:11.0.1'
     compile 'com.google.firebase:firebase-messaging:11.0.1'
-
+    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
 }
 configurations.all {
     resolutionStrategy.eachDependency { details ->
